Repository and service for Flight, added @Transactional to every service